Fixed loading roms in production. Added new tests.